<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="5dp">

        <RelativeLayout
            android:layout_width="28dp"
            android:layout_height="match_parent">

            <!--这个是垂直的长条-->
            <View
                android:id="@+id/item_vertical_line_v"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="#e9e9e9" />

            <View
                android:id="@+id/left_date_icon"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="7.5dp"
                android:background="@drawable/cst_platform_timer_shaft_yellow">
            </View>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/report_happen_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="15dp"
                android:textSize="14dp"/>

                <TextView
                    android:id="@+id/report_more_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/cst_platform_report_fragment_more"
                    android:drawableRight="@drawable/cst_platform_report_right_arrow"
                    android:drawablePadding="5dp"
                    android:textSize="13dp"
                    android:textColor="#999999"/>

            </LinearLayout>

        <!--右边的大框-->
        <LinearLayout
            android:id="@+id/report_detail"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="#5796ec"
                      android:layout_marginRight="10dp"
                      android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:drawableLeft="@drawable/cst_platform_expense"
                        android:drawablePadding="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/cst_platform_report_fragment_expense"
                        android:alpha="0.7"
                        android:textSize="12dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                        android:id="@+id/report_expense_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="24dp"/>

                        <TextView
                            android:layout_marginLeft="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:alpha="0.7"
                            android:text="@string/cst_platform_break_rule_rmb"
                            android:textSize="11dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/cst_platform_oil_mass"
                        android:drawablePadding="5dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="#ffffff"
                        android:alpha="0.7"
                        android:text="@string/cst_platform_report_fragment_oil_mass"
                        android:textSize="12dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                        android:id="@+id/report_oil_mass_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="24dp"/>

                        <TextView
                            android:layout_marginLeft="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:alpha="0.7"
                            android:text="@string/cst_platform_report_fragment_litre"
                            android:textSize="11dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:alpha="0.2"
                android:background="#ffffff"
                />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/report_milleag_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:alpha="0.7"
                        android:text="@string/cst_platform_report_fragment_mileage"
                        android:textSize="10dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                        android:id="@+id/report_mileage_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"/>

                        <TextView
                            android:id="@+id/report_mileage_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="10dp"
                            android:alpha="0.7"
                            android:text="km"
                            android:textColor="#ffffff"
                            />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/report_drive_time_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:alpha="0.7"
                        android:text="@string/cst_platform_report_fragment_drive_time"
                        android:textSize="10dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    <TextView
                        android:id="@+id/report_drive_time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"/>

                        <TextView
                            android:id="@+id/report_drive_time_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="10dp"
                            android:alpha="0.7"
                            android:text="h"
                            android:textColor="#ffffff"
                            />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/report_ave_oil_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:alpha="0.7"
                        android:text="@string/cst_platform_report_fragment_ave_oil_mass"
                        android:textSize="10dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                        android:id="@+id/report_ave_oil_mass_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"/>

                        <TextView
                            android:id="@+id/report_ave_oil_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:alpha="0.7"
                            android:textSize="10dp"
                            android:text="L/100km"
                            android:textColor="#ffffff"
                            />

                       </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/report_ave_speed_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:alpha="0.7"
                        android:text="@string/cst_platform_report_fragment_ave_speed"
                        android:textSize="10dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                        android:id="@+id/report_ave_speed_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"/>


                        <TextView
                            android:id="@+id/report_ave_speed_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="10dp"
                            android:alpha="0.7"
                            android:text="km/h"
                            android:textColor="#ffffff"
                            />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/report_bottom"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#ffffff"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/report_reminder_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="#666666"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/report_reminder_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#666666"
                    android:layout_gravity="center_vertical"
                    android:textSize="14dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/report_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cst_platform_message_num_sigle"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="12dp"
                    />

                <!--箭头方向-->
                <ImageView
                    android:id="@+id/iv_more"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/cst_platform_report_right_arrow"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>